Fix not scollable page and edit header layout on mobile

--- a/website/style.css
+++ b/website/style.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: clip;
 }
 
 code {
